src/test/deca/context/valid/improvided/print_int_float_string.deca
// Description :
// 	test de print des types int, float, string
// Resultats :
// 	ok
{
	int x = 3;
	float z = 4.5; 
	println("Sana zen dl3alam");
	print(3);
	println(z);
	
}
